...
                        .focused($isTextFieldFocused)
                        .onSubmit {
                            submitRequest()
                            isTextFieldFocused = false
                        }
                        .textFieldStyle(RoundedBorderTextFieldStyle())
                        .accessibilityIdentifier("Search query")
                        .onAppear {
                            startPlaceholderRotation()
                        }
                        .opacity(animatedOpacity)
                    
                    Button(action: {
...
                            .padding(5.0)
                            .frame(height: 35.0)
                            .background(Color.accentColor)
                            .foregroundColor(.white)
                            .cornerRadius(10)
                    }
                    .accessibilityIdentifier("Search for restaurants")
                }
                Spacer()
            }
            .padding(.trailing)
        }
        .frame(height: 100)
...
