...
                    }
                }) {
                    Image(systemName: showFilters ? "chevron.up" : "chevron.down")
                        .foregroundColor(.blue)
                        .font(.system(size: 16))
                }
                .accessibilityIdentifier("Show Filters")
            }

            if (showFilters) {
                VStack(alignment: .leading) {
                    Text("Distance: \(Int(selectedDistance)) miles")
                        .font(.subheadline)
                    
                    Slider(value: $selectedDistance, in: 1...50, step: 1)
                        .accentColor(.blue)
                        .padding(.vertical, 10)
                        .accessibilityIdentifier("Distance slider")
                    
                    VStack(alignment: .leading, spacing: 10) {
                        Text("Min Price: ")
                            .font(.subheadline)
                        HStack {
                            ForEach(priceRange, id: \.self) { index in
...
