...
        }
//        .navigationBarHidden(true)
//        .navigationBarBackButtonHidden(true)
    }
    
    func getNearbyRestaurants() {
        if ProcessInfo.processInfo.environment["UITestMockUser"] == "true" {
            if ProcessInfo.processInfo.environment["NoRestaurants"] == "true" {
                return
            }
            #if DEBUG
            restaurantList = mockRestaurantList
            #endif
            return
...
